Changed table border-collapse to separate to fix border issues on tables.

--- a/themes/Nova/css/reset.css
+++ b/themes/Nova/css/reset.css
@@ -49,6 +49,6 @@ del {
 
 /* tables still need 'cellspacing="0"' in the markup */
 table {
-	border-collapse: collapse;
+	border-collapse: separate;
 	border-spacing: 0;
 }
